package queryingCommands;

import core.Command;

public interface QCommand extends Command {
}
